# obs-stats-NBV

./: LICENSE  README.md
comparator/: CMakeLists.txt  package.xml
comparator/include/comparator/: box_tools.h  compare_rec_gt.h  compute_metrics.h  compute_ot_metrics.h  dataset_info.h  datatypes.h
comparator/launch/: comparator.launch
comparator/src/: box_tools.cpp  comparator.cpp  compare_rec_gt.cpp  compute_metrics.cpp  compute_ot_metrics.cpp  dataset_info.cpp
explo_quality_aware/: CMakeLists.txt  package.xml
explo_quality_aware/include/explo_quality_aware/: Candidate.h  Constants.h  InformationGain.h  InformationGainROS.h  PointRay.h  Policy.h  TrajectoryCostmap.h  Utils.h  proba_point_type.h
explo_quality_aware/launch/: costmap.launch  explo.launch
explo_quality_aware/src/: Candidate.cpp  InformationGain.cpp  InformationGainROS.cpp  PointRay.cpp  TrajectoryCostmap.cpp
functions/: CMakeLists.txt  Makefile  package.xml
functions/include/functions/: Function.h
functions/src/: Function.cpp
functions/test/: function.cpp  function_approx.cpp
mesh_slicer/: CMakeLists.txt  Makefile  README.txt
mesh_slicer/src/: AABB_polyhedron_facet_distance_example.cpp  clean_polyhedron.cpp  mesh_segment_intersection.cpp  mesh_segment_slicer.cpp  mesh_segment_vslicer.cpp  mesh_voxelizer.cpp  optimize_path.cpp  polyhedron_translate.cpp  shortest_paths.cpp  tmp.cpp
obs_stat/: CMakeLists.txt  package.xml
obs_stat/include/obs_stat/: Constants.h  CoordinateConversions.h  Tools.h  obs_stat_lib.h  observation_stat_with_gridpub.h  stat_point_type.h
obs_stat/launch/: obs_stat_on_bag.launch  obs_stat_pointcloud.launch
obs_stat/src/: obs_stat_lib.cpp  observation_stat_with_gridpub.cpp
obs_stat/srv/: SaveGrid.srv
slice_octomap/: CMakeLists.txt  package.xml
slice_octomap/include/slice_octomap/: slice_octomap_node.h
slice_octomap/launch/: compare_ot_gt.launch
slice_octomap/src/: slice_octomap_node.cpp
